Set a min-width to prevent popover displayed on the side to be too small.

--- a/projects/pastanaga-angular/src/styles/components/_popover.scss
+++ b/projects/pastanaga-angular/src/styles/components/_popover.scss
@@ -15,6 +15,7 @@
     border-radius: $border-radius-default;
     color: $color-text-popover;
     max-width: rhythm(32);
+    min-width: rhythm(20);
   }
 
   &:before {
